--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
     <body>
 
         <div class = "header">
-            <div class = "name">Alan Turing</div>
+            <div class = "name">
+                Alan Turing
+            </div>
+            <div class = "links">
+                <ul>
+                    <li><a href = "achievements.html">Achievements</a></li>
+                    <li><a href = "biography.html">Biography</a></li>
+                    <li><a href = "timeline.html">Timeline</a></li>
+                </ul>
+            </div>
         </div>
 
 
@@ -75,7 +84,26 @@
             </div>
         </div>
 
-        
+        <div class = "content-page-1">
+            <div class = "content-page-1-top">
+                <img src = "bombe.jpg">
+                <div class = "center-image">
+                    <img src = "alanturing.jpg">
+                </div>
+                <img src = "imacoin.jpg">
+            </div>
+            <div class = "content-page-1-bottom">
+                <div class = "paragraph-text">
+                    Throughout Alan Turing's life he managed to have many amazing accomplishments. He originally had got a
+degree in mathematics and then found a job as a codebreaker working for the British government. This is
+where he got the idea for his machine that would eventually break the German enigma. The breaking of Enigma
+gave the Allies a upperhand against the Axis which would save tens, hundreds of thousands, or more lives.
+After his career working with the British government, he began designing many computers for different
+companies. Eventually he began to be a pioneer for Artificial Intelligence as some of his work on it is still
+studied today. He is now the face of the British 50p.
+                </div>
+            </div>
+        </div>
 
 
 
