--- a/achievements.html
+++ b/achievements.html
@@ -8,23 +8,57 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <div class = "acc">
-        <div class = "acc-header">
-            Alan Turing : Accomplishments 
+    <div class = "header">
+        <div class = "name">
+            Alan Turing 
         </div>
+        <div class = "links">
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "achievements.html">Achievements</a></li>
+                <li><a href = "biography.html">Biography</a></li>
+                <li><a href = "timeline.html">Timeline</a></li>
+            </ul>
+        </div>
+    </div>
         <div class = "acc-content">
             <div class = "acc-boxes">
                 <div class = "box-1">
-                    This is box 1 I am going to take up as much space
-                    as possible
+                    Breaking Enigma: <br>
+During WW2, the allies were desperate and needed a way to spy on German communications.
+However, the Germans developed a form of encryption that was different every
+day. For the allies to win the war they needed to break their encryption
+without them knowing. Thanks to Alan Turing, he and his team were able to 
+create one of the first computers that were capable of defeating the
+German encryption and giving the allies a secret Trump card. Without 
+the work Alan and his team did, who knows how the war could've ended?
                 </div>
 
                 <div class = "box-2">
-
+                    Devloping Early Computers: <br>
+                    Alan Turing and his team created the first design of the Bombe, starting
+                    their work in 1939. The bombe was an electro-mechanical designed to figure 
+                    out the internal settings of the Enigma machine so they could decrypt
+                    German messages. The device was made of many motors that when put together, 
+                    used logical operations until it found what it needed. A bombe used a section
+                    of known plaintext from encrypted messages to help it figure out the code.
+                    Later designs improved the faults of Turing, but nonetheless he created
+                    a computer in a world with none that existed. His intelligence and 
+                    achievements progressed the world to the advanced point where we are now.
                 </div>
 
                 <div class = "box-3">
-
+                    Pioneer for AI / Turing Test:
+                    <br>
+                    After the war, Alan Turing began to think more about computers and the
+                    possible future of them. He wondered the ultimate question, about whether
+                    or not computers could think? He developed the Turing Test, which was
+                    a test designed to test whether or not a machine was capable of speaking
+                    like a human. This is something that is still taught as a foundation 
+                    of artifical intelligence. Alan Turing was always ahead, as he pondered
+                    the possibility of a computer becoming human, we are now advancing artifical
+                    Intelligence. 
+                    
                 </div>
             </div>
         </div>
