--- a/biography.html
+++ b/biography.html
@@ -4,41 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel = "stylesheet" href = "styles.css">
+    <title>Biography</title>
+    <link rel = "stylesheet" href="styles.css">
 </head>
 <body>
-    <div class = "bio">
-        <div class = "bio-header">
-            Alan Turing : Biography
+    <div class = "header">
+        <div class = "name">
+            Alan Turing 
         </div>
-        <div class = "bio-content">
-            <div class = "early-life">
-                <div class = "early-life-header">
-                    Early Life
-                </div>
-
-            </div>
-            
-            <div class = "code-breaker">
-                <div class = "code-breaker-header">
-                    Code Breaker
-                </div>
-            </div>
-
-            <div class = "comp-design">
-                <div class = "comp-design-header">
-                    Computer Designer
-                </div>
-            </div>
-
-            <div class = "ai-pioneer">
-                <div class = "ai-pioneer-header">
-                    AI Pioneer
-                </div>
-
-            </div>
-
+        <div class = "links">
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "achievements.html">Achievements</a></li>
+                <li><a href = "biography.html">Biography</a></li>
+                <li><a href = "timeline.html">Timeline</a></li>
+            </ul>
         </div>
     </div>
 </body>
