--- a/timeline.html
+++ b/timeline.html
@@ -8,6 +8,18 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    
+    <div class = "header">
+        <div class = "name">
+            Alan Turing 
+        </div>
+        <div class = "links">
+            <ul>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href = "achievements.html">Achievements</a></li>
+                <li><a href = "biography.html">Biography</a></li>
+                <li><a href = "timeline.html">Timeline</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
