--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             </div>
             <div class = "links">
                 <ul>
+                    <li><a href = "index.html">Home</a></li>
                     <li><a href = "achievements.html">Achievements</a></li>
                     <li><a href = "biography.html">Biography</a></li>
                     <li><a href = "timeline.html">Timeline</a></li>
