--- a/biography.html
+++ b/biography.html
@@ -16,10 +16,35 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "achievements.html">Achievements</a></li>
-                <li><a href = "biography.html">Biography</a></li>
+                <li><a href = "biography.html">Design</a></li>
                 <li><a href = "timeline.html">Timeline</a></li>
             </ul>
         </div>
     </div>
+
+    <div class = "bio-content">
+        <div class = "bio-top">
+            After leaving the code breaking job, Turing found another in which he would design computers.
+        </div>
+        
+        <div class = "bio-images">
+            <img src = "Pilot.jpg">
+            <img src = "cpl.jpg">
+            <img src = "feranti.jpg">
+        </div>
+
+        <div class = "bio-text">After the war was over, Alan Turing was recruited
+            by the NPL (National Physical Labratory) to create an electronic
+            computer. He designed a computer that was digital and vastly
+            superior to all the others at the time, known as the Automatic Computing
+            Engine. His colleagues thought the engineering was too complicated, so 
+            they designed a smaller version called the "Pilot Model Ace"(See Picture 1).
+            He then took up a job at the Computing Machine Laboratory at the University of Manchester 
+            as a director. There he worked on theoretical ideas and designed computers, (See Picture 2). 
+            Then, he designed the first programming manual and his programming system was used
+            in the Ferranti Mark 1 Computer. (See Picture 3).
+        </div>
+    </div>
+
 </body>
 </html>
