--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href = "index.html">Home</a></li>
                     <li><a href = "achievements.html">Achievements</a></li>
-                    <li><a href = "biography.html">Biography</a></li>
+                    <li><a href = "biography.html">Design</a></li>
                     <li><a href = "timeline.html">Timeline</a></li>
                 </ul>
             </div>
@@ -72,7 +72,7 @@
                 
                 <div class = "image-three">
                     <img src = "enigma.jpg">
-                    <h2>Unnamed standing next to Alan
+                    <h2>Neumann standing next to Alan
                         Turing's Creation
                     </h2>
                 </div>
