--- a/timeline.html
+++ b/timeline.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href = "index.html">Home</a></li>
                 <li><a href = "achievements.html">Achievements</a></li>
-                <li><a href = "biography.html">Biography</a></li>
+                <li><a href = "biography.html">Design</a></li>
                 <li><a href = "timeline.html">Timeline</a></li>
             </ul>
         </div>
