--- a/timeline.html
+++ b/timeline.html
@@ -8,7 +8,7 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <div class = "header">
+    <div class = "header" style = "margin-bottom : 10px;">
         <div class = "name">
             Alan Turing 
         </div>
@@ -22,7 +22,23 @@
         </div>
     </div>
 
-    
+    <table style = "width : 100%;">
+       <tr>
+        <th>Princeton, 1936</th>
+        <th>Bombe, 1940</th>
+        <th>ACE, 1947</th>
+        <th>Turing Test, 1950</th>
+        <th>Death, 1954</th>
+       </tr>
+
+        <tr>
+            <td>Few modern mathematicians have ever achieved the public renown of Alan M. Turing (1912-54), a pioneer in the fields of theoretical computer science and artificial intelligence. Turing was a graduate student at Princeton University from 1936 to 1938, studying under Professor Alonzo Church </td>
+            <td>In March 1940, Turing’s first Bombe, a code-breaking machine, was installed at Bletchley Park; improvements suggested by British mathematician Gordon Welchman were incorporated by August. This complex machine consisted of approximately 100 rotating drums, 10 miles of wire, and about 1 million soldered connections. </td>
+            <td> His design for the Automatic Computing Engine (ACE) was the first complete specification of an electronic stored-program all-purpose digital computer. Had Turing's ACE been built as he planned, it would have had vastly more memory than any of the other early computers, as well as being faster.</td>
+            <td>The Turing test, originally called the imitation game by Alan Turing in 1950,[2] is a test of a machine's ability to exhibit intelligent behaviour equivalent to, or indistinguishable from, that of a human. Turing proposed that a human evaluator would judge natural language conversations between a human and a machine designed to generate human-like responses</td>
+            <td>Turing died on 7 June 1954, 16 days before his 42nd birthday, from cyanide poisoning. An inquest determined his death as a suicide, but it has been noted that the known evidence is also consistent with accidental poisoning.</td>
+        </tr>
+    </table>
 
 </body>
 </html>
