--- a/index.html
+++ b/index.html
@@ -23,14 +23,10 @@
         </div>
 
 
-        <!-- add text next to images to explain what they are and header to left-content
-        do the same for the right content, also add headers to left content
-        and right content 
-        -->
         <div class = "content">
             <div class = "left-content">
                 <div class = "first-image">
-                    <img src = "Alan_Turing_Aged_16.jpg">
+                    <a href = "https://en.wikipedia.org/wiki/Alan_Turing"><img src = "Alan_Turing_Aged_16.jpg"></a>
                     <h2>Alan Turing : age 16</h2>
                 </div>
 
